[tool.poetry]
name = "asyncio_server"
version = "0.1.0"
description = ""
authors = ["MargitStar <sovenokbymargo@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
asyncio = "^3.4.3"
SQLAlchemy = "^1.4.22"
pydantic = "^1.8.2"
alembic = "^1.6.5"
psycopg2 = "^2.9.1"
Flask = "^2.0.1"
marshmallow = "^3.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
