[tool.poetry]
name = "asyncio_server"
version = "0.1.0"
description = ""
authors = ["MargitStar <sovenokbymargo@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
asyncio = "^3.4.3"
pydantic = "^1.8.2"
asyncio-db = {path = "../asyncio_db"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
