[tool.poetry]
name = "flask-application"
version = "0.1.0"
description = ""
authors = ["MargitStar <sovenokbymargo@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
marshmallow = "^3.13.0"
Flask = "^2.0.1"
asyncio-db = {path = "../asyncio-db"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
